<resources>
    <string name="app_name">Baqyla</string>
    <string name="welcome_to_baqyla">Добро пожаловать в Baqyla!</string>
    <string name="anuar_yespenbet">Ануар Еспенбет</string>
    <string name="bekaidar_sultanbek">Бекайдар Султанбек</string>
    <string name="calendar">Календарь занятий</string>
    <string name="not_late">Не опоздал</string>
    <string name="did_not_come">Не пришел</string>
    <string name="late">Опоздал</string>
    <string name="enter_id">Пожалуйста введите ID для регистрации</string>
    <string name="id">ID номер</string>
    <string name="enter_your_id">Введите ваш ID</string>
    <string name="next">Далее</string>
    <string name="copyright">© 2020 BAQYLA. Все права защищены.</string>
    <string name="error">Ошибка</string>
    <string name="error_id">Вы ввели неправильный айди</string>
    <string name="error_login">Неправильный логин или пароль</string>
    <string name="enter_login_and_password">Введите ваш логин и пароль для входа в аккаунт.</string>
    <string name="your_login">Ваш логин</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="create_password">Пожалуйста придумайте пароль для своей учетной записи</string>
    <string name="enter_password">Введите пароль</string>
    <string name="enter_again">Повторите пароль</string>
    <string name="back">Назад</string>
    <string name="back2">назад</string>
    <string name="change_id">Сменить ID</string>
    <string name="info_child">Сведения о ребенке</string>
    <string name="choose_subject">Выберите занятие чтобы посмотреть данные</string>
    <string name="attendance_percent">Процент посещаемости занятий за все время</string>
    <string name="visited_lessons">Посещенных занятий за последний <font color='#00DEB1'>месяц</font></string>
    <string name="missed_lessons">Пропущенных занятий за последний <font color='#00DEB1'>месяц</font></string>
    <string name="select_reason">Выберите причину и предмет по которому хотите сообщить об отсутсвие</string>
    <string name="choose_subject2">Выберите предмет</string>
    <string name="additional_field">Поле для дополнительного ввода текста</string>
    <string name="enter_message">Введите сообщение</string>
    <string name="send_message">Отправить сообщение</string>
    <string name="close">Закрыть</string>
    <string name="message_accepted">Cпасибо ваше сообщение принято !</string>
    <string name="one_hundred">100%</string>
    <string name="school_info">Информация о школе</string>
    <string name="school_sunkar">Школа развития ‘Сункар’</string>
    <string name="school_phone">+7 702 678 78 78</string>
    <string name="school_address">г. Алматы, Есенгелди 76а</string>
    <string name="school_email">sunkar_school@school.edu</string>
    <string name="students_count_for_subject">Число учеников прошедщих занятия по уроку </string>
    <string name="attendance_percent_students">Процент посещаемости учеников за все время</string>
    <string name="home">Home</string>
    <string name="school">School</string>
    <string name="syllabus">Syllabus</string>
    <string name="mail">Mail</string>
    <string name="logout">Выйти</string>
    <string name="settings">Настройки</string>
    <string name="menu">Меню</string>
    <string name="logout_text">Вы действительно хотите выйти?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="hide">Скрыть</string>
    <string name="on_boarding_first_title">Вы сможете с легкостью отслеживать время пребывание вашего ребенка</string>
    <string name="on_boarding_first_description">Вам придет уведомление о посещении</string>
    <string name="on_boarding_second_title">Вы сможете быть уверенными в безопасности вашего ребенка</string>
    <string name="on_boarding_second_description">Face ID c отсканированными данными</string>
    <string name="on_boarding_third_title">Вы сможете отслеживать успеваемость, расписание и количество посещенных уроков вашего ребенка</string>
    <string name="on_boarding_third_description">Расписание с календарем занятий</string>
    <string name="exit">выйти из аккаунта</string>
    <string name="notification">Уведомление</string>
    <string name="you_dont_have_notifications">У вас нет текущих уведомлений</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
</resources>
