<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:orientation="vertical">

    <TextView
        style="@style/LoginDescriptionTextViewStyle"
        android:text="@string/enter_login_and_password" />

    <EditText
        android:id="@+id/id_edit"
        style="@style/LoginEditTextStyle"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rounded_green"
        android:hint="@string/id"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/password_edit"
        style="@style/LoginEditTextStyle"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/change_id"
        android:layout_width="@dimen/login_edit_text_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/change_id"
        android:textColor="@color/grey_text"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/error_text"
        style="@style/LoginErrorTextViewStyle"
        android:layout_width="@dimen/login_edit_text_width"
        android:layout_height="wrap_content"
        android:text="@string/error_login" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_btn"
        style="@style/LoginButtonStyle"
        android:enabled="false" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/LoginProgressStyle" />
</LinearLayout>
