<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/on_boarding_gradient"
    >

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/on_boarding_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
        android:id="@+id/on_boarding_dots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:dotsColor="@color/grey"
        app:dotsCornerRadius="8dp"
        app:dotsSize="8dp"
        app:dotsSpacing="4dp"
        app:dotsWidthFactor="1"
        app:selectedDotColor="@color/light_green"
        app:progressMode="false"
        app:layout_constraintBottom_toBottomOf="@id/on_boarding_button_hide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/on_boarding_button_hide"
         />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/on_boarding_button_hide"
        style="@style/OnBoardingOutlinedButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/on_boarding_button_height"
        android:layout_marginStart="17dp"
        android:layout_marginBottom="49dp"
        android:text="@string/hide"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/on_boarding_text_view_copyright"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/on_boarding_button_next"
        style="@style/OnBoardingButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/on_boarding_button_height"
        android:layout_marginEnd="17dp"
        android:backgroundTint="@color/white"
        android:text="@string/next"
        android:textColor="@color/second_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/on_boarding_button_hide" />

    <TextView
        android:id="@+id/on_boarding_text_view_copyright"
        style="@style/OnBoardingCopyRightTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:text="@string/copyright"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>